# remind-me

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml
cli/: Cargo.toml
cli/src/: args.rs  main.rs
core/: Cargo.toml  Test.toml
core/src/: daemon.rs  lib.rs  reminders.rs  task.rs  watcher.rs
remind/: Cargo.toml  ignore_extra.txt
remind-me-gui/: package.json  pnpm-lock.yaml
remind-me-gui/app/: layout.tsx  page.tsx
remind-me-gui/components/: add-reminder-dialog.tsx  add-reminder-form.tsx  config.tsx  delete-reminder-dialog.tsx  edit-reminder-dialog.tsx  edit-reminder-form.tsx  reminder-card.tsx
remind-me-gui/components/config/: autostart.tsx  config.tsx  run-backend-with-gui.tsx  start-minimized.tsx  theme-selector.tsx
remind-me-gui/components/reminder/: delete-reminder-dialog.tsx  edit-reminder-dialog.tsx  edit-reminder-form.tsx  reminder-card.tsx
remind-me-gui/src/: bindings.ts
remind-me-gui/src-tauri/: Cargo.toml  tauri.conf.json
remind-me-gui/src-tauri/src/: main.rs
remind/config/: Config.toml  Test.toml
remind/src/: config.rs  daemon.rs  error.rs  lib.rs  main.rs  reminders.rs  task.rs  watcher.rs
