[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
core = { path = "../core" }
anyhow = "1.0.79"
log = "0.4.20"
colored = "2.1.0"
notify-rust = "4.10.0"
