[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.35.1", features = ["full"] }
notify-rust = "4.10.0"
serde = "1.0.195"
toml = "0.8.8"
notify = "6.1.1"
futures = "0.3.30"
anyhow = "1.0.79"
