[package]
name = "remind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
notify-rust = "4.10.0"
serde = "1.0.195"
toml = "0.8.8"
notify = "6.1.1"
futures = "0.3.30"
anyhow = "1.0.79"
thiserror = "1.0.57"
daemonize = "0.5.0"
notify-debouncer-full = "0.3.1"
tempfile = "3.9.0"
sysinfo = "0.30.5"
directories = "5.0.1"

tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
specta = "1.0.5"
tauri = { version = "1.5.4", features = [] }

# necessary..?
[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
